WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107366
[EFL][WebGL] Regression: WebGL Content is not drawn after resizing the canvas.
https://bugs.webkit.org/show_bug.cgi?id=107366
Summary
[EFL][WebGL] Regression: WebGL Content is not drawn after resizing the canvas.
Kalyan
Reported
2013-01-19 00:51:02 PST
Steps: 1) Launch MiniBrowser and load
https://www.khronos.org/registry/webgl/sdk/demos/webkit/SpiritBox.html
2) After a rotating cube is drawn resize the Window. Expected Result: Window is resized and we see a rotating cube. Actual Result: Nothing is drawn after resize.
Attachments
patch
(1.43 KB, patch)
2013-01-19 06:14 PST
,
Kalyan
kenneth
: review+
Details
Formatted Diff
Diff
patchv2
(1.43 KB, patch)
2013-01-19 07:51 PST
,
Kalyan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kalyan
Comment 1
2013-01-19 02:50:42 PST
A better use case to test this:
http://aleksandarrodic.com/p/jellyfish/
Kalyan
Comment 2
2013-01-19 06:14:12 PST
Created
attachment 183622
[details]
patch
Kenneth Rohde Christiansen
Comment 3
2013-01-19 07:17:31 PST
Comment on
attachment 183622
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=183622&action=review
> Source/WebCore/platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp:443 > + // Client doesn't own the Window. Delete surface only > + // on writing side.
I would make that one line and write Window with lowercase
Kalyan
Comment 4
2013-01-19 07:51:55 PST
Created
attachment 183625
[details]
patchv2
WebKit Review Bot
Comment 5
2013-01-19 09:17:08 PST
Comment on
attachment 183625
[details]
patchv2 Clearing flags on attachment: 183625 Committed
r140252
: <
http://trac.webkit.org/changeset/140252
>
WebKit Review Bot
Comment 6
2013-01-19 09:17:12 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug