[EFL][WebGL] Regression: WebGL Content is not drawn after resizing the canvas. https://bugs.webkit.org/show_bug.cgi?id=107366

Patch by Kondapally Kalyan <kalyan.kondapally@intel.com> on 2013-01-19
Reviewed by Kenneth Rohde Christiansen.

Window is shared between GraphicsSurface and its client.
Client doesn't own the Window. This patch ensures that client
doesn't delete the shared Window handle.

Covered by existing WebGL tests.

* platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp:
(WebCore::GraphicsSurfacePrivate::clear):

Canonical link: https://commits.webkit.org/125606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140252 268f45cc-cd09-0410-ab3c-d52691b4dbfc